# Changelog
- Quote generation now supported via [jsvine/markovify](https://github.com/jsvine/markovify).