@@ -1,0 +1,19 @@
+name: Run Docker container
+on:
+  push:
+    branches:
+      - 'stable-**'
+
+jobs:
+  run:
+    runs-on: self-hosted
+    environment: production
+
+    steps:
+      - uses: actions/checkout@v4
+      - name: Run Container
+        run: docker compose up -d --build
+        env:
+          TOKEN: ${{ secrets.TOKEN }}
+      - name: Cleanup
+        run: docker image prune -f
