@@ -1,4 +1,4 @@
 #!/bin/bash
 
 export PROJECT_NAME="ASTRA: SE"
-export TAG="v1.1"
+export TAG="v1.2"
