@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "astra-bot"
-version = "1.1.post1"
+version = "1.2"
 authors = [
 	{ name="Anokhi Suresh", email="anokhi.suresh@mail.mcgill.ca" },
 ]
