@@ -3,8 +3,8 @@ import discord.ext.commands as commands
 
 from discord import app_commands
 
-from connections import AstraHandler
-from generation import AstraMarkovModel
+from astra.connections import AstraHandler
+from astra.generation import AstraMarkovModel
 
 @app_commands.allowed_contexts(guilds=True, dms=False, private_channels=True)
 class QuoteGroup(commands.GroupCog, name='quote', group_name='quote'):
