@@ -1,2 +1,5 @@
 # Changelog
-- Quote generation now supported via [jsvine/markovify](https://github.com/jsvine/markovify).
+- Main file added as well as Docker container for running the bot.
+- Use environment variable TOKEN to specify your token.
+- Also, workflows.
+- Fixed import statements in module
